--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@fortawesome/pro-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "ajv": "6.12.0",
-    "autoprefixer": "^9.1.0",
+    "autoprefixer": "^9.8.6",
     "axios": "^0.19.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -53,19 +53,23 @@
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react": "^7.22.0",
     "express": "4.17.1",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
+    "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
-    "moment": "^2.25.3",
+    "moment": "^2.29.1",
     "node-sass": "^4.13.1",
     "postcss-loader": "^2.1.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-dropzone-component": "^3.2.0",
     "react-modal": "^3.12.1",
     "react-redux": "7.2.0",
@@ -77,7 +81,7 @@
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
     "webpack-dev-middleware": "3.7.2",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-hot-middleware": "2.25.0",
     "webpack-merge": "4.2.2"
   },
